# agent-space-2.0

./: SWIFT_COMPLETE_GUIDE.md  VALIDATION_FIX.py  agentspace.db  agentspace.py  agentspace_agentbuilder.py  agentspace_design_agent.py  agentspace_design_styles.py  agentspace_discord.db  agentspace_discord_bot.py  agentspace_docx_generator.py  agentspace_inputs.py  agentspace_language_styles.py  agentspace_llm.py  agentspace_main.py  agentspace_main_AI.py  agentspace_prompts.py  agentspace_scrapers.py  agentspace_webapp.py  marketing_kit_Example_Corp_20260201_180157.json  pyproject.toml
discord_outputs/: Marketing_Kit_Swift_Innovation_20260201_214053.docx  Marketing_Kit_Toys_R_Us_20260202_232142.docx  Marketing_Kit_ucari_20260201_185228.docx  Marketing_Kit_ucari_20260201_185404.docx  Marketing_Kit_ucari_20260201_185509.docx  Marketing_Kit_ucari_20260201_185617.docx  Marketing_Kit_ucari_20260201_185759.docx  Marketing_Kit_ucari_20260201_190151.docx  Marketing_Kit_ucari_20260201_190312.docx  Marketing_Kit_ucari_20260201_191652.docx  Marketing_Kit_ucari_20260202_231232.docx  discord_marketing_kit_Swift_Innovation_11.json  discord_marketing_kit_ucari_10.json  discord_marketing_kit_ucari_3.json  discord_marketing_kit_ucari_4.json  discord_marketing_kit_ucari_5.json  discord_marketing_kit_ucari_6.json  discord_marketing_kit_ucari_7.json  discord_marketing_kit_ucari_8.json  discord_marketing_kit_ucari_9.json
documents/: AGENTSPACE_README.md  AGENTSPACE_WEB_DISCORD_SETUP.md  DESIGN_CONTROL_GUIDE.md  INTELLIGENCE_UPGRADE_GUIDE.md  LANGUAGE_STYLE_INTEGRATION_GUIDE.md  (+1 more)
(+75 files in other folders)
